--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=root
 spring.test.database.replace=none
 spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
 
-#spring.jpa.hibernate.naming.physical-strategy=\
-#org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.physical-strategy=\
+org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
